create opcoesDoCartao component and render on view

--- a/src/components/OpcoesDoCartao/opcoesDoCartao.css
+++ b/src/components/OpcoesDoCartao/opcoesDoCartao.css
@@ -30,7 +30,7 @@
 	margin-right: .5em;
 }
 
-.opcoesDoCartao-fecha {
+/* .opcoesDoCartao-fecha {
 	background-image: url("../img/close.svg");
 }
 
@@ -40,7 +40,7 @@
 
 .opcoesDoCartao-edita {
 	background-image: url("../img/edit.svg");
-}
+} */
 
 .opcoesDoCartao-radioTipo{
 	display: none;
